- MFB: Fixed bug #45186 (__call depends on __callstatic in class scope)